# moclo-syntax-model

./: .cruft.json  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.public.mk  example_assemblies.py  mkdocs.yml  pyproject.toml  spreadsheet.csv
.github/workflows/: deploy-docs.yaml  main.yaml  test_pages_build.yaml
examples/: README.md
images/assemblies/: index.html
project/jsonld/: moclo_syntax_model.context.jsonld  moclo_syntax_model.jsonld
project/owl/: moclo_syntax_model.owl.ttl
src/data/examples/valid/: Kit-001.yaml
src/docs/files/: about.md
src/moclo_syntax_model/datamodel/: _models.py
src/moclo_syntax_model/schema/: moclo_syntax_model.yaml
tests/: __init__.py  test_data.py
