[tool.poetry]
authors = ["Manuel Lera-Ramirez <manulera14@gmail.com>"]
description = "A LinkML model to describe MoClo syntax"
version = "0.0.0"
name = "moclo_syntax_model"
license = "MIT"
readme = "README.md"
include = ["README.md", "src/moclo_syntax_model/schema", "project"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.dependencies]
linkml-runtime = ">=1.1.24"
python = "^3.9"
pydantic = "^2.7.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.group.dev.dependencies]
linkml = ">=1.3.5"
mkdocs-material = ">=8.2.8"
mkdocs-mermaid2-plugin = ">=1.1.1"
schemasheets = ">=0.1.14"
jupyter = ">=1.0.0"
mknotebooks = ">= 0.8.0"
autopep8 = "^2.3.2"
flake8-bugbear = "^24.12.12"
black = "^25.1.0"
pre-commit = "^4.1.0"

[tool.black]
line-length = 119
